# SphericalMeshAnalysis

./: .gitignore  CMakeLists.txt  README.md
sparam/: main.cpp
